<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.listfragment.RepoListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRepoList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/repo_list_item"/>

    <ProgressBar
        android:id="@+id/repoListProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/noResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:text="@string/no_results"
        android:textSize="@dimen/title_size_16sp"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/retryButton"
        android:layout_width="70dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/purple_200"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/retry"
        android:textSize="@dimen/retry_button_text_size_20sp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/retryButton"
        app:layout_constraintStart_toStartOf="@id/retryButton"
        app:layout_constraintEnd_toEndOf="@id/retryButton"
        android:layout_marginBottom="@dimen/loading_error_message_margin_8dp"
        android:text="@string/results_could_not_be_loaded"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>